[package]
name = "post_gist"
version = "0.1.0"
edition = "2021"

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
